test/fail_compile/chars_tooclose.tas
.chars"this is a test"
